@@ -732,7 +732,7 @@ class Subnets_controller extends Common_api_functions {
 	private function read_all_subnets() {
 		// fetch
 		$results = $this->Subnets->fetch_all_subnets();
-		
+
 		// add nameservers, GW, permission and location for each network found
 		if($results!==false) {
 			foreach($results as $key => $result) {
@@ -740,28 +740,28 @@ class Subnets_controller extends Common_api_functions {
 				if ($ns!==false) {
 					$result->nameservers = $ns;
 				}
-				
+
 				$gateway = $this->read_subnet_gateway ($result->id);
 				if ( $gateway!== false) {
 					$result->gatewayId = $gateway->id;
 					$gateway = $this->transform_address ($gateway);
 					$result->gateway = $gateway;
 				}
-	    			
+
 				$result->permissions = $this->User->get_user_permissions_from_json($result->permissions);
-				
+
 				// location details
 				if(!empty($result->location)) {
 					$result->location = $this->Tools->fetch_object ("locations", "id", $result->location);
 				} else {
 					$result->location = array();
 				}
-	    			
-	    			// erase old values
-	    			$results[$key] = $result;
+
+    			// erase old values
+    			$results[$key] = $result;
 			}
 		}
-		
+
 		# result
 		return sizeof($results)==0 ? false : $results;
 	}
@@ -786,11 +786,7 @@ class Subnets_controller extends Common_api_functions {
 	 * @return int|bool
 	 */
 	private function read_subnet_gateway ($id=NULL) {
-    		if($id === NULL) {
-    			return $this->Subnets->find_gateway ($this->_params->id);
-		} else {
-			return $this->Subnets->find_gateway ($id);
-		}
+		return $id === NULL ? $this->Subnets->find_gateway ($this->_params->id) : $this->Subnets->find_gateway ($id);
 	}
 
 	/**
